@@ -1,7 +1,7 @@
 package ru.sweetbun.BecomeAnyone.service;
 
+import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,33 +19,58 @@ import java.util.Map;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
-@Transactional
+@RequiredArgsConstructor
 @Service
 public class LessonService {
 
     private final LessonRepository lessonRepository;
 
     private final ModelMapper modelMapper;
-
+    @Lazy
     private final ModuleService moduleService;
 
-    @Autowired
-    public LessonService(LessonRepository lessonRepository, ModelMapper modelMapper, @Lazy ModuleService moduleService) {
-        this.lessonRepository = lessonRepository;
-        this.modelMapper = modelMapper;
-        this.moduleService = moduleService;
+    @Transactional
+    public List<Lesson> updateLessons(List<UpdateLessonInCourseDTO> lessonDTOS, Module module) {
+        Map<Long, Lesson> currentLessonsMap = module.getLessons().stream()
+                .collect(Collectors.toMap(Lesson::getId, Function.identity()));
+
+        List<Lesson> updatedLessons = mergeLessons(lessonDTOS, modelMapper, currentLessonsMap, module);
+
+        if (!currentLessonsMap.isEmpty())
+            lessonRepository.deleteAll(new ArrayList<>(currentLessonsMap.values()));
+        return updatedLessons;
     }
 
+    @Transactional
+    public static List<Lesson> mergeLessons(List<UpdateLessonInCourseDTO> lessonDTOS, ModelMapper mapper,
+                                            Map<Long, Lesson> currentLessonsMap, Module module) {
+        return lessonDTOS.stream().map(lessonDTO -> {
+            Long lessonDTOId = lessonDTO.getId();
+            Lesson lesson;
+
+            if (lessonDTOId != null && currentLessonsMap.containsKey(lessonDTOId)) {
+                lesson = currentLessonsMap.remove(lessonDTOId);
+                mapper.map(lessonDTO, lesson);
+            } else {
+                lesson = mapper.map(lessonDTO, Lesson.class);
+                lesson.setModule(module);
+            }
+            return lesson;
+        }).collect(Collectors.toList());
+    }
+
+    @Transactional
     public Lesson createLesson(CreateLessonDTO lessonDTO, Long moduleId) {
         Module module = moduleService.getModuleById(moduleId);
         return lessonRepository.save(createLesson(lessonDTO, module));
     }
 
+    @Transactional
     public void createLessons(List<CreateLessonDTO> lessonDTOS, Module module) {
         List<Lesson> lessons = lessonDTOS.stream()
                 .map(lessonDTO -> createLesson(lessonDTO, module))
-                .collect(Collectors.toList());
-        lessonRepository.saveAll(lessons);
+                .toList();
+        if (!lessons.isEmpty()) lessonRepository.saveAll(lessons);
     }
 
     private Lesson createLesson(CreateLessonDTO lessonDTO, Module module) {
@@ -57,44 +82,22 @@ public class LessonService {
 
     public Lesson getLessonById(Long id) {
         return lessonRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(Lesson.class.getSimpleName(), id));
+                .orElseThrow(() -> new ResourceNotFoundException(Lesson.class, id));
     }
 
     public List<Lesson> getAllLessonsByModule(Long moduleId) {
         return lessonRepository.findAllByModuleOrderByOrderNumAsc(moduleService.getModuleById(moduleId));
     }
 
+    @Transactional
     public Lesson updateLesson(UpdateLessonDTO updateLessonDTO, Long id) {
         Lesson lesson = getLessonById(id);
         modelMapper.map(updateLessonDTO, lesson);
         return lessonRepository.save(lesson);
     }
 
-    public List<Lesson> updateLessons(List<UpdateLessonInCourseDTO> lessonDTOS, Module module) {
-        Map<Long, Lesson> currentLessonsMap = module.getLessons().stream()
-                .collect(Collectors.toMap(Lesson::getId, Function.identity()));
-
-        List<Lesson> updatedLessons = new ArrayList<>();
-
-        for (UpdateLessonInCourseDTO lessonDTO : lessonDTOS) {
-            Long lessonDTOId = lessonDTO.getId();
-            if (lessonDTOId != null && currentLessonsMap.containsKey(lessonDTOId)) {
-                Lesson lesson = currentLessonsMap.get(lessonDTOId);
-                currentLessonsMap.remove(lessonDTOId);
-                modelMapper.map(lessonDTO, lesson);
-                updatedLessons.add(lesson);
-            } else {
-                Lesson newLesson = modelMapper.map(lessonDTO, Lesson.class);
-                newLesson.setModule(module);
-                Lesson savedLesson = lessonRepository.save(newLesson);
-                updatedLessons.add(savedLesson);
-            }
-        }
-        lessonRepository.deleteAll(new ArrayList<>(currentLessonsMap.values()));
-        return updatedLessons;
-    }
-
-    public String deleteLessonById(Long id) {
+    @Transactional
+    public long deleteLessonById(Long id) {
         Lesson lessonToDelete = getLessonById(id);
         int orderNum = lessonToDelete.getOrderNum();
         lessonRepository.deleteById(id);
@@ -102,6 +105,8 @@ public class LessonService {
         List<Lesson> lessonsToUpdate = lessonRepository.findByOrderNumGreaterThan(orderNum);
         lessonsToUpdate.forEach(lesson -> lesson.setOrderNum(lesson.getOrderNum() - 1));
         lessonRepository.saveAll(lessonsToUpdate);
-        return "Lesson has been deleted with id: " + id;
+        return id;
     }
+
+
 }
